Bug 52514 - [GM965 SNA] xrandr rotation crash in 2.20.1, regression from 2.20.0
Summary: [GM965 SNA] xrandr rotation crash in 2.20.1, regression from 2.20.0
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-25 23:33 UTC by chr.ohm
Modified: 2012-07-25 23:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description chr.ohm 2012-07-25 23:33:03 UTC
I tried the new Intel driver with SNA on my Thinkpad X61t with Ubuntu 12.04, and with 2.20.1, the X server crashes when doing e.g. "xrandr -o left". Bisecting blamed c564414157e27417f0de1c0542dafd9b47e01eda, and reverting that commit on top of 2.20.1 makes xrandr rotation work again.

System:
00:02.0 VGA compatible controller: Intel Corporation Mobile GM965/GL960 Integrated Graphics Controller (primary) (rev 0c)
xserver-xorg                                                1:7.6+12ubuntu1
xserver-xorg-core                                           2:1.11.4-0ubuntu10.6
Comment 1 Chris Wilson 2012-07-25 23:53:07 UTC
Really the bug was there all along, just the recent change made it much easier to hit...

commit b6c7c490d76c683b7b5c89d20f902603b85bd3bc
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jul 26 00:48:59 2012 +0100

    sna: Check for a NULL scanout after DPMS off with shadow enabled
    
    We may mark the scanout as detached when all outputs are turned off (for
    example during rotation) and so in the subsequent block handler we need
    to be careful in case we are handling a detached shadow.
    
    Reported-by: chr.ohm@gmx.net
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=52514
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.